# hw19_2_store_django

./: README.md  pyproject.toml
catalog/: apps.py  urls.py  views.py
catalog/templates/catalog/: about.html  base.html  contacts.html  home.html  index.html
config/: settings.py  urls.py
